<resources>
    <string name="app_name">BangaliAna</string>
    <string name="info_first_line">The Easy food shopping solution</string>
    <string name="info_second_line">Food is in your hand now!!</string>
    <string name="btn_login">User Login hear</string>
    <string name="btn_user_singup">New User? Register here</string>
    <string name="enter_email">Enter email</string>
    <string name="enter_password">Enter password</string>
    <string name="registration_message">new user registration</string>
    <string name="user_login">USER LOGIN</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="contact_number">Contact number</string>
    <string name="btn_register">Register</string>
    <string name="popular_product">Popular Product</string>
    <string name="browse_category">Browse Category</string>
</resources>
