<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/screen_bg"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10sp"
        android:orientation="vertical">
        <ImageView
            android:layout_width="250dp"
            android:layout_height="150dp"
            android:src="@drawable/foodlogo"
            android:layout_gravity="center"
            android:layout_marginTop="90sp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/info_first_line"
            android:textSize="15sp"
            android:textAllCaps="true"
            android:textColor="@color/colorDarkRed"
            android:layout_marginTop="80sp"
            android:textAlignment="center"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/info_second_line"
            android:textSize="20sp"
            android:textAllCaps="true"
            android:textColor="@color/colorRed"
            android:textAlignment="center"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_login_bg"
            android:text="@string/btn_login"
            android:textSize="20sp"
            android:textColor="@color/colorWhite"
            android:layout_marginTop="80sp"
            android:id="@+id/btn_loginId"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_signup_bg"
            android:text="@string/btn_user_singup"
            android:textSize="20sp"
            android:textColor="@color/colorWhite"
            android:layout_marginTop="10sp"
            android:id="@+id/btn_signupId"/>
    </LinearLayout>
    

</LinearLayout>