<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10sp"
        android:orientation="vertical">
        <ImageView
            android:layout_width="250dp"
            android:layout_height="150dp"
            android:src="@drawable/foodlogo"
            android:layout_gravity="center"
            android:layout_marginTop="50sp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/registration_message"
            android:textSize="20sp"
            android:textAllCaps="true"
            android:textColor="@color/colorDarkRed"
            android:layout_marginTop="50sp"
            android:textAlignment="center"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2"
            >
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_marginTop="5sp"
                android:id="@+id/user_first_name_wrapper"
                >

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/edt_first_nameId"
                    android:inputType="text"
                    android:hint="@string/first_name"
                    android:textColorHint="@color/colorRed"
                    android:textColor="@color/colorRed"/>

            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_marginTop="5sp"
                android:id="@+id/user_last_name_wrapper"
                >

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/edt_last_nameId"
                    android:inputType="text"
                    android:hint="@string/last_name"
                    android:textColorHint="@color/colorRed"
                    android:textColor="@color/colorRed"/>

            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5sp"
            android:id="@+id/user_email_wrapper"
            >

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/edt_emailId"
                android:inputType="textEmailAddress"
                android:hint="@string/email_address"
                android:textColorHint="@color/colorRed"
                android:textColor="@color/colorRed"/>

        </com.google.android.material.textfield.TextInputLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2"
            >
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_marginTop="5sp"
                android:id="@+id/user_password_wrapperId"
                >

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/edt_passwordId"
                    android:inputType="textPassword"
                    android:hint="@string/password"
                    android:textColorHint="@color/colorRed"
                    android:textColor="@color/colorRed"/>

            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_marginTop="5sp"
                android:id="@+id/user_confirm_password_wrapper"
                >

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/edt_confirm_passwordId"
                    android:inputType="textPassword"
                    android:hint="@string/confirm_password"
                    android:textColorHint="@color/colorRed"
                    android:textColor="@color/colorRed"/>

            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5sp"
            android:id="@+id/user_contact_wrapper"
            >

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/edt_contactId"
                android:inputType="phone"
                android:hint="@string/contact_number"
                android:textColorHint="@color/colorRed"
                android:textColor="@color/colorRed"/>

        </com.google.android.material.textfield.TextInputLayout>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_login_bg"
            android:text="@string/btn_register"
            android:textSize="20sp"
            android:textColor="@color/colorWhite"
            android:layout_marginTop="20sp"
            android:id="@+id/btn_registerId"/>
    </LinearLayout>
</LinearLayout>