<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10sp"
        android:orientation="vertical">
        <ImageView
            android:layout_width="250dp"
            android:layout_height="150dp"
            android:src="@drawable/foodlogo"
            android:layout_gravity="center"
            android:layout_marginTop="50sp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/user_login"
            android:textSize="20sp"
            android:textAllCaps="true"
            android:textColor="@color/colorDarkRed"
            android:layout_marginTop="50sp"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5sp"
            android:id="@+id/user_login_email_WrapperId"
            >

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/user_login_emailId"
                android:inputType="textEmailAddress"
                android:hint="@string/enter_email"
                android:textColor="@color/colorRed"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5sp"
            android:id="@+id/user_login_password_WrapperId">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/user_login_passwordId"
                android:inputType="textVisiblePassword"
                android:hint="@string/enter_password"
                android:textColor="@color/colorRed"/>
        </com.google.android.material.textfield.TextInputLayout>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_login_bg"
            android:text="@string/user_login"
            android:textSize="20sp"
            android:textColor="@color/colorWhite"
            android:layout_marginTop="20sp"
            android:id="@+id/btn_loginId"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Or"
            android:textSize="25sp"
            android:textAllCaps="true"
            android:textColor="@color/colorDarkRed"
            android:layout_marginTop="5sp"
            android:textAlignment="center"/>
        <TextView
            android:id="@+id/tv_signupId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_user_singup"
            android:textSize="22sp"
            android:textAllCaps="true"
            android:textColor="@color/colorDarkRed"
            android:layout_marginTop="5sp"
            android:textAlignment="center"/>
    </LinearLayout>

</LinearLayout>